# lotus

./: Cargo.toml  README.md
assets/: shader.wgsl
assets/models/: plane_cube.mtl
assets/shaders/: light.wgsl  noise.wgsl  shader.wgsl  wireframe.wgsl
src/: app_config.rs  camera.rs  client.rs  commands.rs  engine_state.rs  main.rs  noise.rs  renderer_state.rs  scene.rs  state.rs
src/ecs/: ecs.rs
src/pipelines/: wireframe.rs
src/ui/: console.rs  mod.rs  renderer.rs  settings.rs  text.rs
src/voxel/: instance.rs  light.rs  mod.rs  model.rs  plane.rs  renderer.rs  texture.rs  vertex.rs
