[package]
name = "lotus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytemuck = { version = "1.15.0", features = ["derive"] }
env_logger = "0.11.3"
gltf = "1.4.0"
image = "0.25.0"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["full"] }
wgpu = "0.19.3"
winit = "0.29.15"
