[package]
name = "lotus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bytemuck = { version = "1.15.0", features = ["derive"] }
cgmath = "0.18.0"
egui = "0.27.0"
egui-wgpu = "0.27.0"
egui-winit = "0.27.0"
epaint = "0.27.0"
fast_log = "1.6.16"
futures = "0.3.30"
gltf = "1.4.0"
image = "0.25.0"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tobj = { version = "4.0.1", features = ["async"] }
tokio = { version = "1.36.0", features = ["full"] }
wgpu = "0.19.3"
wgpu_text = "0.8.6"
winit = "0.29.15"
